# open-dread-rando

./: .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: patch.yml  python.yml
icons/: README.md
open_dread_rando/: __init__.py  __main__.py  boss_powerup_template.lua  cli.py  common_data.py  constants.py  cosmetic_patches.py  custom_door_types.py  custom_init.lua  door_patcher.py  dread_patcher.py  elevator.py  environmental_damage.py  environmental_damage_sources.py  exefs.py  game_patches.py  lua_editor.py  lua_util.py  map_icon_data.py  map_icons.py  material_patcher.py  missile_color_patcher.py  model_data.py  model_patcher.py  objective.py  output_config.py  patcher_editor.py  pickup.py  randomizer_powerup.lua  randomizer_progressive_template.lua  schema,json  schema.json  static_fixes.py  template_powerup_bmsad.json  text_patches.py  tilegroup_patcher.py  version.py
open_dread_rando/__pyinstaller/: __init__.py  hook-open_dread_rando.py
open_dread_rando/files/: custom_scenario.lua  randomizer_powerup.lua  schema.json
open_dread_rando/files/dread_depackager/: README.md  subsdk9
open_dread_rando/files/exefs_patches/: debug_input.s
open_dread_rando/files/levels/: s010_cave.lc.lua  s020_magma.lc.lua  s030_baselab.lc.lua  s040_aqua.lc.lua  s050_forest.lc.lua  s060_quarantine.lc.lua  s070_basesanc.lc.lua  s080_shipyard.lc.lua  s090_skybase.lc.lua
open_dread_rando/files/lua_libraries/: data_structures.lua  death_counter.lua  guilib.lua  input_handling.lua  room_names.lua
open_dread_rando/files/romfs/actors/items/item_cube_broken/model/: itemcube_camo.bcmdl  itemcube_sonr.bcmdl
open_dread_rando/files/romfs/actors/items/item_missiletank/models/: item_missile__CY.bcmdl  item_missile__MG.bcmdl  item_missile__OR.bcmdl
open_dread_rando/files/romfs/actors/items/itemsphere/models/: itemspher1.bcmdl  magnetsphere.bcmdl
open_dread_rando/files/romfs/actors/items/powerup_doublejump/models/: powerup_magnet.bcmdl
open_dread_rando/files/romfs/actors/items/powerup_supermissile/models/: powerup_ice__missile.bcmdl
open_dread_rando/files/romfs/actors/items/powerup_widebeam/models/: powerup_wavebeam.bcmdl
open_dread_rando/files/romfs/actors/props/shield__power_bomb/models/: shield_powerbomb.bcmdl
open_dread_rando/files/romfs/actors/props/shield_bombs_regular__/models/: shield_bombs_regular__.bcmdl
open_dread_rando/files/romfs/actors/props/shield_cross_bomb/models/: shield_cross_bomb.bcmdl
open_dread_rando/files/romfs/actors/props/shield_cross_bomb_____/models/: shield_cross_bomb_____.bcmdl
open_dread_rando/templates/: boss_powerup_template.lua  cc_to_room_name.lua  custom_core_x.lua  custom_core_x_superquetzoa.lua  custom_corex.lua  custom_init.lua  progressive_model_template.lua  randomizer_progressive_template.lua  template_doorshield_hexs_bmsad.json  template_doorshield_tris_bmsad.json  template_powerup_bmsad.json
src/open_dread_rando/: __init__.py  __main__.py  cli.py  configuration.pyi  constants.py  custom_door_types.py  door_patcher.py  dread_patcher.py  exefs.py  logger.py  lua_util.py  map_icons.py  missile_color_patcher.py  model_data.py  patch_util.py  patcher_editor.py  pickup.py  static_fixes.py  validator_with_default.py
src/open_dread_rando/__pyinstaller/: __init__.py  hook-open_dread_rando.py
src/open_dread_rando/cosmetic_patches/: __init__.py  missile_color_patcher.py
src/open_dread_rando/door_locks/: custom_door_types.py  door_patcher.py
src/open_dread_rando/files/: __init__.py  custom_scenario.lua  msemenu_mainmenu.lua  randomizer_powerup.lua  schema.json
src/open_dread_rando/files/dread_depackager/: README.md  main.npdm  subsdk9
src/open_dread_rando/files/exefs_patches/: .gitignore
src/open_dread_rando/files/levels/: readme.txt  s010_cave.lc.lua  s020_magma.lc.lua  s030_baselab.lc.lua  s040_aqua.lc.lua  s050_forest.lc.lua  s060_quarantine.lc.lua  s070_basesanc.lc.lua  s080_shipyard.lc.lua
src/open_dread_rando/files/lua_libraries/: bit.lua  custom_samus_gui.lua  death_counter.lua  disconnect_gui.lua  guilib.lua  input_handling.lua  room_names.lua
src/open_dread_rando/files/romfs/gui/scripts/: randohudcomposition.bmscp  randosamuscomposition.bmscp
src/open_dread_rando/files/romfs_source/: README.md  randosamuscomposition_with_dummy.bmscp
src/open_dread_rando/files/templates/: boss_powerup_template.lua  custom_core_x.lua  custom_core_x_superquetzoa.lua  custom_init.lua  template_doorshield_energy.bmsad  template_doorshield_energy_bmsad.json  template_doorshield_hexs.bmsad  template_doorshield_tris.bmsad  template_powerup.bmsad
src/open_dread_rando/misc_patches/: actor_patcher.py  elevator.py  exefs.py  lua_util.py  material_patcher.py  model_patcher.py  sprite_patches.py  text_patches.py  tilegroup_patcher.py  tunable_patcher.py
src/open_dread_rando/pickups/: lua_editor.py  map_icons.py  model_data.py  pickup.py  split_pickups.py
src/open_dread_rando/specific_patches/: environmental_damage.py  environmental_damage_sources.py  game_patches.py  mass_delete_actors.py  objective.py  static_fixes.py
src/open_dread_rando/templates/: custom_core_x.lua  custom_core_x_superquetzoa.lua  progressive_model_template.lua
tests/: conftest.py  test_dread_patcher.py  test_full_patch.py  test_lua_util.py  test_schema.py
tests/test_files/: april_fools_patcher.json  randomizer_progressive_expected.lua  starter_preset_expected_hashes.json  starter_preset_patcher.json
tests/test_files/patcher_files/: advanced_patcher.json  april_fools_patcher.json  starter_preset_patcher.json
tools/: create_exefs_patches.py
tools/romfs_sources/: README.md  randosamuscomposition_with_dummy.bmscp
(+97 files in other folders)
