[build-system]
requires = [
    "setuptools>=61.2",
    "setuptools_scm[toml]>=3.4.3",

    # Creating the exefs patches
    "keystone-engine>=0.9.2",
    "ips.py>=0.1.2",
]
build-backend = "setuptools.build_meta"

[project]
name = "open-dread-rando"
description = "An open source randomizer patcher for Metroid Dread."
classifiers = [
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.9",
]
requires-python = ">=3.10"
dependencies = [
    "mercury-engine-data-structures>=0.24",
    "jsonschema>=4.0.0",
]
dynamic = ["version"]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/randovania/open-dread-rando"

[project.optional-dependencies]
test = [
    "lupa",
    "pytest",
    "pytest-cov",
    "pytest-mock",
]

# Entry Points for PyInstaller
[project.entry-points.pyinstaller40]
hook-dirs = "open_dread_rando.__pyinstaller:get_hook_dirs"

[tool.setuptools_scm]
local_scheme = "no-local-version"
write_to = "src/open_dread_rando/version.py"

[tool.ruff]
line-length = 120
select = ["E", "F", "W", "C90", "I", "UP"]
src = ["src"]

# Version to target for generated code.
target-version = "py39"

[tool.mypy]
files = [
    "src/open_dread_rando/pickups/split_pickups.py",
    "src/open_dread_rando/pickups/pickup.py",
    "src/open_dread_rando/door_locks/custom_door_types.py",
]
follow_imports = "silent"
disallow_untyped_defs = true