[metadata]
name = open-dread-rando
description = An open source randomizer patcher for Metroid Dread.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/randovania/open-dread-rando
author = Henrique Gemignani

classifiers =
    OSI Approved :: GNU General Public License v3 (GPLv3)
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    Programming Language :: Python :: 3.9

[options]
packages = open_dread_rando
install_requires =
    mercury-engine-data-structures>=0.7.0
    jsonschema>=4.0.0

include_package_data = True
zip_safe = False
python_requires = >=3.9

[options.extras_require]
test =
    pytest
    pytest-cov
    pytest-mock
